k8s/vote-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-app
spec:
  selector:
    app: vote-app
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-app
  template:
    metadata:
      labels:
        app: vote-app
    spec:
      containers:
        - name: vote-app
          image: sajedul5/devops:vote-1
          ports:
            - containerPort: 8080
