k8s/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: otel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.56
          ports:
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 16686
              name: http-ui

---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector
  namespace: otel
spec:
  selector:
    app: jaeger
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: http-ui
      port: 16686
      targetPort: 16686

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ui-ingress
  namespace: otel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: jaeger.todo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-collector
                port:
                  number: 16686
