k8s/vote-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-app-ingress
  namespace: otel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: vote-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-app
                port:
                  number: 8080
